--- a/styles.css
+++ b/styles.css
@@ -2,29 +2,29 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-}
-
-header {
-    color: white;
-    background-image: url('image/header.jpg');
-    background-size: cover;
-    background-position: center;
-    height: 60vh;
-    position: relative;
-    box-shadow: inset 5 0 50px rgba(0, 0, 0, 0.897);
-}
-
-.header-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 200px;
-    background-color: rgba(49, 49, 49, 0.541);
-    position: fixed;
-    top: 0;
-    width: 100%;
-    box-sizing: border-box;
-}
+    }
+    header {
+        color: white;
+        background-image: url('image/header.jpg');
+        background-size: cover;
+        background-position: center;
+        height: 60vh;
+        position: relative;
+        box-shadow: inset 5 0 50px rgba(0, 0, 0, 0.897);
+    }
+    
+    .header-container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px 200px;
+        background-color: rgba(49, 49, 49, 0.541);
+        position: fixed;
+        top: 0;
+        width: 100%;
+        box-sizing: border-box;
+        transition: top 0.3s; /* Añadimos transición para suavizar el movimiento */
+    }
 
 .logo {
     width: 120px;
@@ -78,6 +78,49 @@ header p {
     justify-content: space-around;
     padding: 20px;
     background-color: #f4f4f4;
+}
+.styled-text {
+    font-family: 'Arial', sans-serif;
+    color: #333;
+    line-height: 1.6;
+    font-size: 16px;
+    background-color: #f9f9f9;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    max-width: 600px;
+    margin: 0 auto;
+    text-align: left;
+}
+
+.styled-text strong {
+    font-size: 18px;
+    color: #0056b3;
+}
+
+.styled-text ul {
+    padding-left: 20px;
+    margin-top: 10px;
+}
+
+.styled-text ul li {
+    margin-bottom: 5px;
+    color: #0056b3;
+}
+
+.styled-text .price {
+    font-size: 22px;
+    color: #28a745;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+.styled-text .contact-info {
+    font-size: 18px;
+    color: #d9534f;
+    font-weight: bold;
+    margin-top: 15px;
+    display: block;
 }
 .card {
     background: white;
@@ -185,7 +228,7 @@ footer .social-media a {
 /* Botón de WhatsApp */
 .whatsapp {
     position: fixed;
-    bottom: 80px;
+    bottom: 150px;
     right: 20px;
     z-index: 1000;
 }
@@ -194,6 +237,18 @@ footer .social-media a {
     width: 50px;
     height: 50px;
 }
+.facebook {
+    position: fixed;
+    bottom: 80px;
+    right: 20px;
+    z-index: 1000;
+}
+
+.facebook img {
+    width: 50px;
+    height: 50px;
+}
+
 /* Estilos adicionales para el iframe en el footer */
 footer iframe {
     margin-top: 20px;
